POS-2: Fix login issue